--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,15 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=7.2.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "yiisoft/yii2-httpclient": "~2.0.0"
+        "yiisoft/yii2-httpclient": "~2.0.0",
+        "ext-json": "*",
+        "dejurin/php-google-translate-for-free": "^1.0",
+        "ext-simplexml": "*",
+        "ext-dom": "*",
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
